@@ -5,9 +5,18 @@
 /* Codegeneratormodul COP4-Familie                                           */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: codecop4.c,v 1.2 2006/04/09 12:40:11 alfred Exp $                   *
+/* $Id: codecop4.c,v 1.5 2006/05/07 13:42:52 alfred Exp $                   *
  *****************************************************************************
  * $Log: codecop4.c,v $
+ * Revision 1.5  2006/05/07 13:42:52  alfred
+ * - regard JP target on next page
+ *
+ * Revision 1.4  2006/05/06 10:26:38  alfred
+ * - add COP42x instructions
+ *
+ * Revision 1.3  2006/05/06 09:21:34  alfred
+ * - catch invalid values for AISC & LBI
+ *
  * Revision 1.2  2006/04/09 12:40:11  alfred
  * - unify COP pseudo instructions
  *
@@ -30,19 +39,33 @@
 
 #include "codecop4.h"
 
-static CPUVar CPUCOP410;
+#define FixedOrderCnt 30
+#define ImmOrderCnt 3
+
+typedef struct
+        {
+          CPUVar MinCPU;
+          Word Code;
+        } FixedOrder;
+
+static CPUVar CPUCOP410, CPUCOP420;
+
+static FixedOrder *FixedOrders, *ImmOrders;
 
 /*---------------------------------------------------------------------------*/
 /* Code Generators */
 
 static void DecodeFixed(Word Index)
 {
+  FixedOrder *pOrder = FixedOrders + Index;
+
   if (ArgCnt != 0) WrError(1110);
+  else if (MomCPU < pOrder->MinCPU) WrError(1500);
   else
   {
-    if (Hi(Index))
-      BAsmCode[CodeLen++] = Hi(Index);
-    BAsmCode[CodeLen++] = Lo(Index);
+    if (Hi(pOrder->Code))
+      BAsmCode[CodeLen++] = Hi(pOrder->Code);
+    BAsmCode[CodeLen++] = Lo(pOrder->Code);
   }
 }
 
@@ -66,7 +89,10 @@ static void DecodeSK(Word Index)
 
 static void DecodeImm(Word Index)
 {
+  FixedOrder *pOrder = ImmOrders + Index;
+
   if (ArgCnt != 1) WrError(1110);
+  else if (MomCPU < pOrder->MinCPU) WrError(1500);
   else
   {
     Byte Val;
@@ -75,9 +101,9 @@ static void DecodeImm(Word Index)
     Val = EvalIntExpression(ArgStr[1], Int4, &OK);
     if (OK)
     {
-      if (Hi(Index))
-        BAsmCode[CodeLen++] = Hi(Index);
-      BAsmCode[CodeLen++] = Lo(Index) | (Val & 0x0f);
+      if (Hi(pOrder->Code))
+        BAsmCode[CodeLen++] = Hi(pOrder->Code);
+      BAsmCode[CodeLen++] = Lo(pOrder->Code) | (Val & 0x0f);
     }
   }
 }
@@ -111,6 +137,27 @@ static void DecodeReg(Word Index)
     if (OK)
     {
       BAsmCode[CodeLen++] = Index | ((Reg & 3) << 4);;
+    }
+  }
+}
+
+static void DecodeAISC(Word Index)
+{
+  if (ArgCnt != 1) WrError(1110);
+  else
+  {
+    Byte Val;
+    Boolean OK;
+
+    FirstPassUnknown = False;
+    Val = EvalIntExpression(ArgStr[1], Int4, &OK);
+    if (FirstPassUnknown)
+      Val = 1;
+    if (OK)
+    {
+      if (!Val) WrError(1315);
+      else
+        BAsmCode[CodeLen++] = 0x50 | (Val & 0x0f);
     }
   }
 }
@@ -157,14 +204,24 @@ static void DecodeXAD(Word Index)
     Byte Reg1, Reg2;
     Boolean OK;
  
-    Reg1 = EvalIntExpression(ArgStr[1], UInt4, &OK);
+    FirstPassUnknown = False;
+    Reg1 = EvalIntExpression(ArgStr[1], UInt2, &OK);
+    if ((FirstPassUnknown) && (MomCPU < CPUCOP420))
+      Reg1 = 3;
     if (OK)
     {
+      FirstPassUnknown = False;
       Reg2 = EvalIntExpression(ArgStr[2], UInt4, &OK);
+      if ((FirstPassUnknown) && (MomCPU < CPUCOP420))
+        Reg2 = 15;
       if (OK)
       {
-        BAsmCode[CodeLen++] = 0x20 | Reg1;
-        BAsmCode[CodeLen++] = 0xb0 | Reg2;
+        if ((MomCPU < CPUCOP420) && ((Reg1 != 3) || (Reg2 != 15))) WrError(1350);
+        else
+        {
+          BAsmCode[CodeLen++] = 0x23;
+          BAsmCode[CodeLen++] = 0x80 | (Reg1 << 4) | Reg2;
+        }
       }
     }
   }  
@@ -181,16 +238,53 @@ static void DecodeLBI(Word Index)
     Reg = EvalIntExpression(ArgStr[1], UInt2, &OK);
     if (OK)
     {
+      FirstPassUnknown = False;
+      Val = EvalIntExpression(ArgStr[2], UInt4, &OK);
+      if (FirstPassUnknown)
+        Val = 0;
+      if (OK)
+      {
+        if ((Val > 0) && (Val < 9))
+        {
+          if (MomCPU < CPUCOP420) WrError(1500);
+          else
+          {
+            BAsmCode[CodeLen++] = 0x33;
+            BAsmCode[CodeLen++] = 0x80 | (Reg << 4) | Val;
+          }
+        }
+        else
+        {
+          Val = (Val - 1) & 0x0f;
+          BAsmCode[CodeLen++] = (Reg << 4) | Val;
+        }
+      }
+    }
+  }
+}
+
+static void DecodeLDD(Word Index)
+{
+  if (ArgCnt != 2) WrError(1110);
+  else if (MomCPU < CPUCOP420) WrError(1500);
+  else
+  {   
+    Byte Reg, Val;
+    Boolean OK;
+ 
+    Reg = EvalIntExpression(ArgStr[1], UInt2, &OK);
+    if (OK)
+    {
       Val = EvalIntExpression(ArgStr[2], UInt4, &OK);
       if (OK)
       {
-        Val = (Val - 1) & 0x0f;
+        BAsmCode[CodeLen++] = 0x23;
         BAsmCode[CodeLen++] = (Reg << 4) | Val;
       }
     }
-  }  
-}    
-     
+  }
+}
+
 static void DecodeJSRP(Word Index)
 {
   if (ArgCnt != 1) WrError(1110);
@@ -232,10 +326,23 @@ static void DecodeJP(Word Index)
         WrError(1905);
       if (((CurrPC >> 7) == 1) && ((Addr >> 7) == 1))
         BAsmCode[CodeLen++] = 0x80 | (Addr & 0x7f);
-      else if ((CurrPC >> 6) == (Addr >> 6))
-        BAsmCode[CodeLen++] = 0xc0 | (Addr & 0x3f);
       else
-        WrError(1905);
+      {
+        Word PossPage;
+
+        PossPage = CurrPC >> 6;
+        if ((CurrPC & 0x3f) == 0x3f)
+        {
+          PossPage++;
+          if (FirstPassUnknown)
+            Addr += 0x40;
+        }
+
+        if (PossPage == (Addr >> 6))
+          BAsmCode[CodeLen++] = 0xc0 | (Addr & 0x3f);
+        else
+          WrError(1905);
+      }
     }
   }   
 }     
@@ -243,40 +350,75 @@ static void DecodeJP(Word Index)
 /*---------------------------------------------------------------------------*/
 /* Code Table Handling */
 
+static void AddFixed(char *NName, Word NCode, CPUVar NMin)
+{
+  if (InstrZ >= FixedOrderCnt)
+    exit(0);
+  else
+  {
+    FixedOrders[InstrZ].Code = NCode;
+    FixedOrders[InstrZ].MinCPU = NMin;
+    AddInstTable(InstTable, NName, InstrZ++, DecodeFixed);
+  }
+}
+
+static void AddImm(char *NName, Word NCode, CPUVar NMin)
+{
+  if (InstrZ >= ImmOrderCnt)
+    exit(0);
+  else
+  {
+    ImmOrders[InstrZ].Code = NCode;
+    ImmOrders[InstrZ].MinCPU = NMin;
+    AddInstTable(InstTable, NName, InstrZ++, DecodeImm);
+  }
+}
+
 static void InitFields(void)
 {
   InstTable = CreateInstTable(103);
 
-  AddInstTable(InstTable, "ASC"  , 0x30, DecodeFixed);
-  AddInstTable(InstTable, "ADD"  , 0x31, DecodeFixed);
-  AddInstTable(InstTable, "CLRA" , 0x00, DecodeFixed);
-  AddInstTable(InstTable, "COMP" , 0x40, DecodeFixed);
-  AddInstTable(InstTable, "NOP"  , 0x44, DecodeFixed);
-  AddInstTable(InstTable, "RC"   , 0x32, DecodeFixed);
-  AddInstTable(InstTable, "SC"   , 0x22, DecodeFixed);
-  AddInstTable(InstTable, "XOR"  , 0x02, DecodeFixed);
-  AddInstTable(InstTable, "JID"  , 0xff, DecodeFixed);
-  AddInstTable(InstTable, "RET"  , 0x48, DecodeFixed);
-  AddInstTable(InstTable, "RETSK", 0x49, DecodeFixed);
-  AddInstTable(InstTable, "CAMQ" , 0x333c, DecodeFixed);
-  AddInstTable(InstTable, "LQID" , 0xbf, DecodeFixed);
-  AddInstTable(InstTable, "CAB"  , 0x50, DecodeFixed);
-  AddInstTable(InstTable, "CBA"  , 0x4e, DecodeFixed);
-  AddInstTable(InstTable, "SKC"  , 0x20, DecodeFixed);
-  AddInstTable(InstTable, "SKE"  , 0x21, DecodeFixed);
-  AddInstTable(InstTable, "SKGZ" , 0x3321, DecodeFixed);
-  AddInstTable(InstTable, "ING"  , 0x332a, DecodeFixed);
-  AddInstTable(InstTable, "INL"  , 0x332e, DecodeFixed);
-  AddInstTable(InstTable, "OBD"  , 0x333e, DecodeFixed);
-  AddInstTable(InstTable, "OMG"  , 0x333a, DecodeFixed);
-  AddInstTable(InstTable, "XAS"  , 0x4f, DecodeFixed);
+  FixedOrders = (FixedOrder*)malloc(sizeof(FixedOrder) * FixedOrderCnt);
+  InstrZ = 0;
+  AddFixed("ASC"  , 0x30,   CPUCOP410);
+  AddFixed("ADD"  , 0x31,   CPUCOP410);
+  AddFixed("CLRA" , 0x00,   CPUCOP410);
+  AddFixed("COMP" , 0x40,   CPUCOP410);
+  AddFixed("NOP"  , 0x44,   CPUCOP410);
+  AddFixed("RC"   , 0x32,   CPUCOP410);
+  AddFixed("SC"   , 0x22,   CPUCOP410);
+  AddFixed("XOR"  , 0x02,   CPUCOP410);
+  AddFixed("JID"  , 0xff,   CPUCOP410);
+  AddFixed("RET"  , 0x48,   CPUCOP410);
+  AddFixed("RETSK", 0x49,   CPUCOP410);
+  AddFixed("CAMQ" , 0x333c, CPUCOP410);
+  AddFixed("LQID" , 0xbf,   CPUCOP410);
+  AddFixed("CAB"  , 0x50,   CPUCOP410);
+  AddFixed("CBA"  , 0x4e,   CPUCOP410);
+  AddFixed("SKC"  , 0x20,   CPUCOP410);
+  AddFixed("SKE"  , 0x21,   CPUCOP410);
+  AddFixed("SKGZ" , 0x3321, CPUCOP410);
+  AddFixed("ING"  , 0x332a, CPUCOP410);
+  AddFixed("INL"  , 0x332e, CPUCOP410);
+  AddFixed("OBD"  , 0x333e, CPUCOP410);
+  AddFixed("OMG"  , 0x333a, CPUCOP410);
+  AddFixed("XAS"  , 0x4f,   CPUCOP410);
+  AddFixed("ADT"  , 0x4a,   CPUCOP420);
+  AddFixed("CASC" , 0x10,   CPUCOP420);
+  AddFixed("CQMA" , 0x332c, CPUCOP420);
+  AddFixed("SKT"  , 0x41,   CPUCOP420);  
+  AddFixed("XABR" , 0x12,   CPUCOP420);  
+  AddFixed("ININ" , 0x3328, CPUCOP420);
+  AddFixed("INIL" , 0x3329, CPUCOP420);
 
   AddInstTable(InstTable, "SKGBZ", 0x33, DecodeSK);
   AddInstTable(InstTable, "SKMBZ", 0x00, DecodeSK);
 
-  AddInstTable(InstTable, "AISC" , 0x50, DecodeImm);
-  AddInstTable(InstTable, "STII" , 0x70, DecodeImm);
-  AddInstTable(InstTable, "LEI"  , 0x3360, DecodeImm);
+  ImmOrders = (FixedOrder*)malloc(sizeof(FixedOrder) * ImmOrderCnt);
+  InstrZ = 0;
+  AddImm("STII" , 0x70,   CPUCOP410);
+  AddImm("LEI"  , 0x3360, CPUCOP410);
+  AddImm("OGI"  , 0x3350, CPUCOP420);                 
 
   AddInstTable(InstTable, "JMP"  , 0x60, DecodeJmp);
   AddInstTable(InstTable, "JSR"  , 0x68, DecodeJmp);
@@ -286,12 +428,15 @@ static void InitFields(void)
   AddInstTable(InstTable, "XDS"  , 0x07, DecodeReg);
   AddInstTable(InstTable, "XIS"  , 0x04, DecodeReg);
 
+  AddInstTable(InstTable, "AISC" , 0x00, DecodeAISC);
   AddInstTable(InstTable, "RMB"  , 0x00, DecodeRMB);
   AddInstTable(InstTable, "SMB"  , 0x00, DecodeSMB);
 
   AddInstTable(InstTable, "XAD"  , 0x00, DecodeXAD);
 
   AddInstTable(InstTable, "LBI"  , 0x00, DecodeLBI);  
+
+  AddInstTable(InstTable, "LDD"  , 0x00, DecodeLDD);
 
   AddInstTable(InstTable, "JSRP"  , 0x00, DecodeJSRP);
 
@@ -300,6 +445,8 @@ static void InitFields(void)
 
 static void DeinitFields(void)
 {
+  free(FixedOrders);
+  free(ImmOrders);
   DestroyInstTable(InstTable);
 }
 
@@ -360,4 +507,5 @@ static void SwitchTo_COP4(void)
 void codecop4_init(void)
 {
   CPUCOP410 = AddCPU("COP410", SwitchTo_COP4);
+  CPUCOP420 = AddCPU("COP420", SwitchTo_COP4);
 }
