@@ -46,7 +46,7 @@
 
 \vspace{1cm}\par
 
-{\large Stand M"arz 2006}
+{\large Stand Mai 2006}
 \end{raggedright}
 
 \clearpage
@@ -3226,8 +3226,9 @@ Befehlssatz existieren, die nach Bedarf hinzukommen werden.  Es ist eben
 ein Anfang, und die Dokumentation von National ist ziemlich umfangreich...
 %%-----------
 \begin{quote}
-bf) COP410
-Dies repr"asentiert die COP4-Familie.
+bf) COP410 $\rightarrow$ COP420
+Die COP42x-Derivate bieten einige weitere Befehle, des weiteren wurden
+Befehlen in ihrem Wertebereich erweitert.
 \end{quote}
 %%-----------
 \begin{quote}
@@ -12273,6 +12274,9 @@ damit mit der n"achsten Release alle etwas davon haben :-)
                {\em COP410L/COP411L/COP310L/COP311L
                Single-Chip N-Channel Microcontrollers.\/}
                RRD-B30M105, March 1992
+
+\bibitem{COPS} National Semiconductor: \\
+               {\em COPS Family User's Guide.\/}
 
 \bibitem{CPM68K} Digital Research : \\
                  {\em CP/M 68K Operating System User's Guide.\/} \\
