@@ -65,7 +65,7 @@
 
 \vspace{1cm}\par
 
-{\large Edition March 2006}
+{\large Edition May 2006}
 \end{raggedright}
 
 \clearpage
@@ -3145,8 +3145,9 @@ instruction sets which will be added when a need occurs.  It is a
 beginning, and National's documentation is quite extensive... 
 %%-----------
 \begin{quote}
-bf) COP410     
-This represents the COP4 family.
+bf) COP410 $\rightarrow$ COP420
+The COP42x derivates offer some additional instructions, plus other
+instructions have an extended operand range.
 \end{quote}  
 %%-----------
 \begin{quote}
@@ -11938,6 +11939,9 @@ from this with the next release :-)
                {\em COP410L/COP411L/COP310L/COP311L
                Single-Chip N-Channel Microcontrollers.\/}
                RRD-B30M105, March 1992
+
+\bibitem{COPS} National Semiconductor: \\
+               {\em COPS Family User's Guide.\/}                               
 
 \bibitem{CPM68K} Digital Research: \\
                  {\em CP/M 68K Operating System User's Guide.\/} \\
